fix: image was not wrapping on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@
 }
 
 img {
-  max-width: 100%;
 }
 
 p {
@@ -93,11 +92,6 @@ h5 {
   text-align: center;
 }
 
-.header-name {
-  align-self: center;
-  color: var(--textColor);
-}
-
 .hr-solid-horizontal {
   border-bottom: 1px solid var(--gradient1);
 }
@@ -111,6 +105,7 @@ h5 {
 }
 
 .container {
+  width: 100% !important;
 }
 
 .header {
@@ -120,6 +115,18 @@ h5 {
 .header-image .row {
   padding-bottom: 2em;
   justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding: 4em 4em 4em 4em;
+  }
+}
+
+.header-name {
+  align-self: center;
+  color: var(--textColor);
 }
 
 .row {
